methods.picture.PatternPicture.scala.error
Erreur de compilation :
PatternPicture:7: error: value avance is not a member of Unit
  def changeLigne() {avance();gauche()avance();avance();avance();avance();avance();avance();avance();droite();}
                                      ^